--- a/backend/Dockerfile.backend
+++ b/backend/Dockerfile.backend
@@ -1,4 +1,4 @@
-FROM maven:3.8.4-openjdk-17 as build
+FROM maven:3.8.4-openjdk-17 AS build
 WORKDIR /app
 
 COPY . .
@@ -6,5 +6,6 @@ COPY . .
 RUN mvn clean package -DskipTests
 
 EXPOSE 8080
+EXPOSE 5005
 
-CMD ["java", "-jar", "./target/hotel-subscription-backend-0.0.1-SNAPSHOT.jar"]
+CMD ["java", "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005", "-jar", "./target/hotel-subscription-backend-0.0.1-SNAPSHOT.jar"]
