--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,17 +1,12 @@
-# Database configuration
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${PG_USER}
 spring.datasource.password=${PG_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-
-# JPA and Hibernate configuration
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.default_schema=hotel_subscription
 spring.jpa.hibernate.ddl-auto=update
 
-# Swagger/OpenAPI configuration
-springdoc.api-docs.path=/api-docs
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 
-# Server configuration
 server.port=8080
