--- a/frontend/Dockerfile.frontend
+++ b/frontend/Dockerfile.frontend
@@ -1,10 +1,12 @@
 FROM node:18 AS build
 WORKDIR /app
+RUN npm cache clean --force
 COPY . .
 RUN npm install
 RUN npm run build --prod
 
-FROM nginx:alpine
+FROM nginx:latest AS ngi
 COPY --from=build /app/dist/frontend /usr/share/nginx/html
+COPY /nginx.conf  /etc/nginx/conf.d/default.conf
 EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+# CMD ["nginx", "-g", "daemon off;"]
