Changed default schema to hotel_subscription

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.username=${PG_USER}
 spring.datasource.password=${PG_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.default_schema=hotel_subscription
 
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
