Create audit table for subscription changes using Spring Data Envers

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.password=${PG_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.default_schema=hotel_subscription
+spring.jpa.properties.hibernate.envers.store_data_at_delete=true
 
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
