--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -75,6 +75,10 @@
 			<artifactId>kotlin-test-junit5</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-envers</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
