- Switched from log4j2 to logback, integrating dynamic log level settings via environment variables in Docker - Configured separate log files for normal and error logs with structured paths and retention policies, ensuring logs are managed and stored in Docker volumes

--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ DB_URL=jdbc:postgresql://db:5432/postgres
 PG_USER=postgres
 PG_PASSWORD=password
 PG_DB=postgres
+LOGGING_LEVEL_CONSOLE=INFO
+LOGGING_LEVEL_ROOT=INFO
+LOG_DIRECTORY=/var/log/hotel_subscription
