- Parametrize environment variables in docker-compose and Dockerfiles - Update application.properties to use environment variables for database schema

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.password=${PG_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.default_schema=hotel_subscription
+spring.jpa.properties.hibernate.default_schema=${DB_SCHEMA}
 spring.jpa.properties.hibernate.envers.store_data_at_delete=true
 
 springdoc.api-docs.enabled=true
@@ -12,4 +12,4 @@ springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
 
-server.port=8080
+server.port=${BACKEND_PORT}
