--- a/.env
+++ b/.env
@@ -1,7 +1,14 @@
-DB_URL=jdbc:postgresql://db:5432/postgres
+DB_HOST=db
+DB_PORT=5432
+PG_DB=postgres
 PG_USER=postgres
 PG_PASSWORD=password
-PG_DB=postgres
+DB_URL=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${PG_DB}
 LOGGING_LEVEL_CONSOLE=INFO
 LOGGING_LEVEL_ROOT=INFO
 LOG_DIRECTORY=/var/log/hotel_subscription
+BACKEND_PORT=8080
+DEBUG_PORT=5005
+DB_PORT=5432
+FRONTEND_PORT=80
+DB_SCHEMA=hotel_subscription
