--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,19 +3,25 @@ version: '3.9'
 services:
   backend:
     container_name: backend
-    build: 
+    build:
       context: ./backend
       dockerfile: Dockerfile.backend
     ports:
-      - "8080:8080"
-      - "5005:5005"
+      - "${BACKEND_PORT}:8080"
+      - "${DEBUG_PORT}:5005"
     environment:
-      - DB_URL
-      - PG_USER
-      - PG_PASSWORD
-      - LOGGING_LEVEL_CONSOLE
-      - LOGGING_LEVEL_ROOT
-      - LOG_DIRECTORY
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - PG_DB=${PG_DB}
+      - PG_USER=${PG_USER}
+      - PG_PASSWORD=${PG_PASSWORD}
+      - DB_URL=${DB_URL}
+      - LOGGING_LEVEL_CONSOLE=${LOGGING_LEVEL_CONSOLE}
+      - LOGGING_LEVEL_ROOT=${LOGGING_LEVEL_ROOT}
+      - LOG_DIRECTORY=${LOG_DIRECTORY}
+      - BACKEND_PORT=${BACKEND_PORT}
+      - DEBUG_PORT=${DEBUG_PORT}
+      - DB_SCHEMA=${DB_SCHEMA}
     volumes:
       - ${LOG_DIRECTORY}:${LOG_DIRECTORY}
     depends_on:
@@ -26,7 +32,7 @@ services:
       context: .
       dockerfile: Dockerfile.db
     ports:
-      - "5432:5432"
+      - "${DB_PORT}:5432"
     environment:
       - POSTGRES_USER=${PG_USER}
       - POSTGRES_PASSWORD=${PG_PASSWORD}
@@ -39,7 +45,7 @@ services:
       context: ./frontend
       dockerfile: Dockerfile.frontend
     ports:
-      - "80:80"
+      - "${FRONTEND_PORT}:80"
     depends_on:
       - backend
 
