--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,7 @@ services:
       - POSTGRES_USER=${PG_USER}
       - POSTGRES_PASSWORD=${PG_PASSWORD}
       - POSTGRES_DB=${PG_DB}
+      - DB_SCHEMA=${DB_SCHEMA}
     volumes:
       - pgdata:/var/lib/postgresql/data
   frontend:
