Implemented a class DatabaseSeeder responsible for inserting default subscriptions into the database if no data is present on the first application startup. The `SEED_SUBSCRIPTIONS` parameter in the `.env` file controls whether the default subscriptions should be inserted

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - BACKEND_PORT=${BACKEND_PORT}
       - DEBUG_PORT=${DEBUG_PORT}
       - DB_SCHEMA=${DB_SCHEMA}
+      - SEED_SUBSCRIPTIONS=${SEED_SUBSCRIPTIONS}
     volumes:
       - ${LOG_DIRECTORY}:${LOG_DIRECTORY}
     depends_on:
