--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,4 +12,6 @@ springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
 
+app.seed-subscriptions=${SEED_SUBSCRIPTIONS:false}
+
 server.port=${BACKEND_PORT}
