- Removed the DB_HOST environment variable and refactors the DB_URL valorization. - Cleaned up unnecessary environment variables from the backend container in the docker-compose file

--- a/.env
+++ b/.env
@@ -1,15 +1,13 @@
-DB_HOST=db
 DB_PORT=5432
 PG_DB=postgres
 PG_USER=postgres
 PG_PASSWORD=password
-DB_URL=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${PG_DB}
+DB_URL=jdbc:postgresql://db:5432/${PG_DB}
 LOGGING_LEVEL_CONSOLE=INFO
 LOGGING_LEVEL_ROOT=INFO
 LOG_DIRECTORY=/var/log/hotel_subscription
 BACKEND_PORT=8080
 DEBUG_PORT=5005
-DB_PORT=5432
 FRONTEND_PORT=80
 DB_SCHEMA=hotel_subscription
 SEED_SUBSCRIPTIONS=true
